@@ -39,9 +39,6 @@ TODO, in no particular order :
         - Finish correct handling of child processes when a job  
           is cancelled by the user.
           
-        - newuser: attach(posixAccount | inetOrgPerson | ..., fail|warn)
-          same for newgroup
-          
         - Test and document a possible workaround for knowing
           if the job is a banner (embed a postscript comment
           in the banner).
