@@ -97,16 +97,21 @@ disablehistory: No
 #lastjobbase: ou=LastJobs,ou=PyKota,dc=librelogiciel,dc=com
 #
 # How to create new accounts and groups
-# authorized values are "below" and "attach(objectclass name)"
+# authorized values are "below" and "attach(objectclass name [, fail|warn])"
 #
 # "below" creates the new accounts/groups as standalone entries
 # below the above defined 'userbase' ou
 # 
-# attach(objectclass name) tries to find some existing user/group
+# attach(objectclass name [, action]) tries to find some existing user/group
 # using the above defined 'userrdn' or 'grouprdn' and 'userbase'
 # 'groupbase', and attach the PyKota specific entries to it.
+# if action is "warn" and no entry exists to attach to, a new
+# entry is created, and a message is logged. 
+# if action is "fail" and no entry exists to attach to, program
+# logs an error message and aborts.
+# if action is not set, the default value is "fail".
 #
-# a possible value:  newuser: attach(posixAccount)
+# a possible value:  newuser: attach(posixAccount, warn)
 #newuser : below
 #newgroup : below
 #
